src/sunnonlinsol/newton/F90/fsunnonlinsol_newton_mod.f90

! This file was automatically generated by SWIG (http://www.swig.org).
! Version 4.0.0
!
! Do not make changes to this file unless you know what you are doing--modify
! the SWIG interface file instead.
module fsunnonlinsol_newton_mod
 use, intrinsic :: ISO_C_BINDING
 use fsundials_types
 use fsunnonlinsol_mod
 use fnvector_mod
 implicit none
 private

 ! PUBLIC METHODS AND TYPES
 public :: FSUNNonlinSol_Newton
 public :: FSUNNonlinSol_NewtonSens
 public :: FSUNNonlinSolGetType_Newton
 public :: FSUNNonlinSolInitialize_Newton
 public :: FSUNNonlinSolSolve_Newton
 public :: FSUNNonlinSolFree_Newton
 public :: FSUNNonlinSolSetSysFn_Newton
 public :: FSUNNonlinSolSetLSetupFn_Newton
 public :: FSUNNonlinSolSetLSolveFn_Newton
 public :: FSUNNonlinSolSetConvTestFn_Newton
 public :: FSUNNonlinSolSetMaxIters_Newton
 public :: FSUNNonlinSolGetNumIters_Newton
 public :: FSUNNonlinSolGetCurIter_Newton
 public :: FSUNNonlinSolGetNumConvFails_Newton
 public :: FSUNNonlinSolGetSysFn_Newton

 ! WRAPPER DECLARATIONS
 interface
function FSUNNonlinSol_Newton(y) &
bind(C, name="SUNNonlinSol_Newton") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: y
type(C_PTR) :: fresult
end function

function FSUNNonlinSol_NewtonSens(count, y) &
bind(C, name="SUNNonlinSol_NewtonSens") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
integer(C_INT), value :: count
type(C_PTR), value :: y
type(C_PTR) :: fresult
end function

function FSUNNonlinSolGetType_Newton(nls) &
bind(C, name="SUNNonlinSolGetType_Newton") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
integer(C_INT) :: fresult
end function

function FSUNNonlinSolInitialize_Newton(nls) &
bind(C, name="SUNNonlinSolInitialize_Newton") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
integer(C_INT) :: fresult
end function

function FSUNNonlinSolSolve_Newton(nls, y0, y, w, tol, calllsetup, mem) &
bind(C, name="SUNNonlinSolSolve_Newton") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
type(C_PTR), value :: y0
type(C_PTR), value :: y
type(C_PTR), value :: w
real(C_DOUBLE), value :: tol
logical(C_BOOL), value :: calllsetup
type(C_PTR), value :: mem
integer(C_INT) :: fresult
end function

function FSUNNonlinSolFree_Newton(nls) &
bind(C, name="SUNNonlinSolFree_Newton") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
integer(C_INT) :: fresult
end function

function FSUNNonlinSolSetSysFn_Newton(nls, sysfn) &
bind(C, name="SUNNonlinSolSetSysFn_Newton") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
type(C_FUNPTR), value :: sysfn
integer(C_INT) :: fresult
end function

function FSUNNonlinSolSetLSetupFn_Newton(nls, lsetupfn) &
bind(C, name="SUNNonlinSolSetLSetupFn_Newton") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
type(C_FUNPTR), value :: lsetupfn
integer(C_INT) :: fresult
end function

function FSUNNonlinSolSetLSolveFn_Newton(nls, lsolvefn) &
bind(C, name="SUNNonlinSolSetLSolveFn_Newton") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
type(C_FUNPTR), value :: lsolvefn
integer(C_INT) :: fresult
end function

function FSUNNonlinSolSetConvTestFn_Newton(nls, ctestfn) &
bind(C, name="SUNNonlinSolSetConvTestFn_Newton") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
type(C_FUNPTR), value :: ctestfn
integer(C_INT) :: fresult
end function

function FSUNNonlinSolSetMaxIters_Newton(nls, maxiters) &
bind(C, name="SUNNonlinSolSetMaxIters_Newton") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
integer(C_INT), value :: maxiters
integer(C_INT) :: fresult
end function

function FSUNNonlinSolGetNumIters_Newton(nls, niters) &
bind(C, name="SUNNonlinSolGetNumIters_Newton") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
integer(C_LONG) :: niters
integer(C_INT) :: fresult
end function

function FSUNNonlinSolGetCurIter_Newton(nls, iter) &
bind(C, name="SUNNonlinSolGetCurIter_Newton") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
integer(C_INT) :: iter
integer(C_INT) :: fresult
end function

function FSUNNonlinSolGetNumConvFails_Newton(nls, nconvfails) &
bind(C, name="SUNNonlinSolGetNumConvFails_Newton") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
integer(C_LONG) :: nconvfails
integer(C_INT) :: fresult
end function

function FSUNNonlinSolGetSysFn_Newton(nls, sysfn) &
bind(C, name="SUNNonlinSolGetSysFn_Newton") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
type(C_PTR), value :: sysfn
integer(C_INT) :: fresult
end function

 end interface


end module
